--- a/css/notes.css
+++ b/css/notes.css
@@ -1,12 +1,12 @@
 :root {
-  color-scheme: light dark; /* both supported */
+  color-scheme: light dark;
 }
 
 body {
   background: #D8DEE9;
   color: #434C5E;
+  font: 1.1em/1.5 'SF Pro', ui-sans-serif, system-ui, -system-ui, -apple-system,BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-stretch: 100%;
-  font: 1.1em/1.5 'Atkinson Hyperlegible';
   margin: 40px 0;
   min-height: 100vh;
   word-break: break-word;
@@ -20,7 +20,7 @@ body ::selection {
 
 label,
 textarea {
-    outline: none;
+  outline: none;
 }
 
 textarea {
@@ -29,18 +29,18 @@ textarea {
   border: 1px solid #ccc;
   box-shadow: 0px 0px 5px 2px #999;
   display: block;
-  font-size: 1.1em;
-  letter-spacing: 0.013em;
+  font-size: 1em;
+  letter-spacing: 0.025em;
   line-height: 1.6;
   margin: 40px auto;
   max-width: 60%;
-  padding: 2em 4em;;
+  padding: 2em 4em;
   resize: vertical;
 }
 
 label {
     display: block;
-    font-family: 'Notulen Serif Display';
+    font-family: 'Futura', 'New York', 'Notulen Serif Display', Georgia, 'Times New Roman', Times, serif;
     font-size: 1.5rem;
     font-stretch: 100%;
     margin: 0 auto 20px auto;
